<resources>
    <string name="app_name">D-Note</string>
    <string name="type_title_here">Type title here…</string>
    <string name="type_note_here">Type note here…</string>
    <string name="edit">EDIT</string>
    <string name="contact_support">Contact Support</string>
    <string name="_24_7_support">24/7 Support</string>
    <string name="about_us">About Us</string>
    <string name="information_about_digital_note">Information about Digital Note</string>
    <string name="vault_security">Vault Security</string>
    <string name="enhance_security_of_your_vault">Enhance security of your vault</string>
    <string name="delete_account">Delete Account</string>
    <string name="deleting_account_will_delete_all_notes_irrevasably">Deleting account will delete all notes irreversibly</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="back_to_login">Back to login</string>
    <string name="terms_and_conditions_apply">Terms and conditions apply</string>
    <string name="slogan">We secure and never forget every note</string>
    <string name="sign_in">SIGN IN</string>
    <string name="new_on_digital_notes">New on Digital Notes? </string>
    <string name="update_my_details">UPDATE MY DETAILS</string>
    <string name="update">Update</string>
    <string name="search_notes">Search notes</string>
    <string name="style">Style</string>
    <string name="font_size">Font Size</string>
    <string name="select_how_you_want_to_sort_your_notes">Select how you want to sort your notes</string>
    <string name="other">Other</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="next">Next</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="num_delete">X</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="sample_long">lllllllllllllllllooooooooooooooooooooooooooooooooooooooooooooonnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnngggggggggggggggggggggggggggggg</string>
    <string name="sample_date">April 7</string>
    <string name="sample_title">title</string>
    <string name="type_message_here">Type Message here…</string>
    <string name="send">send</string>
    <string name="new_pin">New Pin</string>
    <string name="confirm_new_pin">Confirm New Pin</string>
    <string name="save">Save</string>
    <string name="upload">Upload</string>
    <string name="color_lens">Change Card Color</string>
    <string name="menu">Menu</string>
    <string name="hide">Hide</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="listview">ListView</string>
    <string name="sign_out">Sign Out</string>
    <string name="update_cloud_security">Update Cloud Security</string>
    <string name="the_vault">The Vault</string>
    <string name="settings">Settings</string>
    <string name="account">ACCOUNT</string>
</resources>