<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuUpload"
        android:icon="@drawable/ic_upload"
        android:title="@string/upload"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuAction"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuDownload"
        android:icon="@drawable/ic_download"
        android:title="@string/download"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuColor"
        android:icon="@drawable/ic_color_lens"
        android:title="@string/color_lens"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuDelete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="always" />

</menu>